--- a/src/assets/i18n/vn.json
+++ b/src/assets/i18n/vn.json
@@ -2,22 +2,20 @@
   "COMMON": {
     "app_name": "Youth Development Monitoring System",
     "copyright": "© 2025 LeaderInYou",
+    "english": "English",
+    "vietnamese": "Tiếng Việt"
+  },
+  "TITLE": {
     "phone": "Số điện thoại",
     "password": "Mật khẩu",
     "login": "Đăng nhập",
     "logout": "Đăng xuất",
-    "access_permission_notification_alert": "Vui lòng cho phép ứng dụng có quyền hiển thị thông báo để nhận được các thông tin cập nhật mới nhất. Xin cảm ơn!",
-    "auth_user_title": "Xác thực người dùng",
-    "auth_by_password_alert": "Không thể xác thực. Vui lòng đăng nhập bằng mật khẩu.",
-    "english": "English",
-    "vietnamese": "Tiếng Việt",
     "remember_me": "Ghi nhớ tài khoản đăng nhập?",
-    "auth_failed": "Đăng nhập không thành công. Vui lòng kiểu tra lại tài khoản và mật khẩu của bạn.",
-    "version": "Phiên bản",
     "data_updating": "Đang cập nhật dữ liệu...",
-    "confirm_logout_alert": "Bạn có chắc chắn muốn đăng xuất?",
+    "input_pin": "Nhập mã khóa",
+    "auth_user_title": "Xác thực người dùng",
     "auth_biometric_unlock_app": "Xác thực để mở khóa ứng dụng",
-    "input_pin": "Nhập mã khóa"
+    "version": "Phiên bản"
   },
   "VALIDATE": {
     "phone_required": "Vui lòng nhập vào số điện thoại.",
@@ -26,7 +24,9 @@
   "ALERT": {
     "default_header": "Thông báo",
     "error_header": "Lỗi",
-    "error_system_header": "Lỗi hệ thống"
+    "error_system_header": "Lỗi hệ thống",
+    "access_permission_notification_alert": "Vui lòng cho phép ứng dụng có quyền hiển thị thông báo để nhận được các thông tin cập nhật mới nhất. Xin cảm ơn!",
+    "confirm_logout_alert": "Bạn có chắc chắn muốn đăng xuất?"
   },
   "BUTTON_TITLES": {
     "confirm": "Xác nhận",
@@ -39,6 +39,17 @@
     "error_header": "Lỗi",
     "success_header": "Thành công",
     "info_header": "Thông tin",
-    "warning_header": "Cảnh báo"
+    "warning_header": "Cảnh báo",
+    "auth_failed": "Đăng nhập không thành công. Vui lòng kiểm tra lại tài khoản và mật khẩu của bạn.",
+    "auth_by_password": "Không thể xác thực. Vui lòng đăng nhập bằng mật khẩu."
+  },
+  "ERROR": {
+    "network": "Lỗi mạng. Vui lòng kiểm tra kết nối Internet của bạn.",
+    "bad_request": "Yêu cầu không hợp lệ. Vui lòng kiểm tra lại dữ liệu.",
+    "unauthorized": "Chưa xác thực. Vui lòng đăng nhập lại.",
+    "forbidden": "Từ chối truy cập. Bạn không có quyền thực hiện thao tác này.",
+    "not_found": "Không tìm thấy tài nguyên. Vui lòng kiểm tra lại đường dẫn.",
+    "server": "Lỗi máy chủ. Vui lòng thử lại sau.",
+    "unknown": "Đã xảy ra lỗi không xác định. Vui lòng thử lại."
   }
 }
