feat(profile-page): Thêm cấu trúc và các component con. Chức năng thiết lập giao diện, avatar, hình nền.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,7 +15,33 @@
     "input_pin": "Input PIN to unlock",
     "auth_user_title": "User authentication",
     "auth_biometric_unlock_app": "Authenticate to unlock the app",
-    "version": "Version"
+    "version": "Version",
+    "home": "Home",
+    "profile": "Profile",
+    "view_profile_page": "View profile page",
+    "badge_collection": "Badge collection",
+    "family_page": "Family page",
+    "class_group": "Class group",
+    "school_group": "School group",
+    "theme_and_background": "Theme & background",
+    "notification_and_sound": "Notification & sound",
+    "language": "Language",
+    "account_and_security": "Account & security",
+    "privacy_rights": "Privacy rights",
+    "report_problems": "Report problems",
+    "contact_and_support": "Contact & support",
+    "terms_and_policies": "Terms & policies",
+    "theme": "Theme",
+    "theme_light": "Light",
+    "theme_dark": "Dark",
+    "text_size": "Text size",
+    "text_size_small": "Small",
+    "text_size_medium": "Medium",
+    "text_size_large": "Large",
+    "text_size_big_size": "Big size",
+    "avatar": "Avatar",
+    "background": "Background",
+    "default": "Default"
   },
   "VALIDATE": {
     "phone_required": "Please input your phone number.",
@@ -33,7 +59,9 @@
     "cancel": "Cancel",
     "open_settings": "Open settings",
     "ok": "OK",
-    "close": "Close"
+    "close": "Close",
+    "set_as_current": "Set as current",
+    "current": "Current"
   },
   "TOAST": {
     "error_header": "Error",
