--- a/src/assets/i18n/vn.json
+++ b/src/assets/i18n/vn.json
@@ -15,7 +15,34 @@
     "input_pin": "Nhập mã khóa",
     "auth_user_title": "Xác thực người dùng",
     "auth_biometric_unlock_app": "Xác thực để mở khóa ứng dụng",
-    "version": "Phiên bản"
+    "version": "Phiên bản",
+    "home": "Trang chủ",
+    "profile": "Cá nhân",
+    "view_profile_page": "Xem trang cá nhân",
+    "badge_collection": "Bộ sưu tập huy hiệu",
+    "family_page": "Trang gia đình",
+    "class_group": "Nhóm lớp",
+    "school_group": "Nhóm toàn trường",
+    "theme_and_background": "Giao diện & hình nền",
+    "notification_and_sound": "Thông báo & âm thanh",
+    "language": "Ngôn ngữ",
+    "account_and_security": "Tài khoản và bảo mật",
+    "privacy_rights": "Quyền riêng tư",
+    "report_problems": "Báo cáo sự cố",
+    "contact_and_support": "Liên hệ hỗ trợ",
+    "terms_and_policies": "Điều khoảng & chính sách",
+    "theme": "Giao diện",
+    "theme_light": "Sáng",
+    "theme_dark": "Tối",
+    "theme_system": "Hệ thống",
+    "text_size": "Kích cỡ chữ",
+    "text_size_small": "Nhỏ",
+    "text_size_medium": "Bình thường",
+    "text_size_large": "Lớn",
+    "text_size_big_size": "Lớn nhất",
+    "avatar": "Avatar",
+    "background": "Hình nền",
+    "default": "Mặc định"
   },
   "VALIDATE": {
     "phone_required": "Vui lòng nhập vào số điện thoại.",
@@ -33,7 +60,9 @@
     "cancel": "Hủy bỏ",
     "open_setting": "Mở cài đặt",
     "ok": "OK",
-    "close": "Đóng"
+    "close": "Đóng",
+    "set_as_current": "Đặt làm hiện tại",
+    "current": "Hiện tại"
   },
   "TOAST": {
     "error_header": "Lỗi",
