fix(form-change-password): Chỉnh sửa một số key chưa khai báo enum

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -94,7 +94,8 @@
     "close": "Close",
     "set_as_current": "Set as current",
     "current": "Current",
-    "save_changes": "Save Changes"
+    "save_changes": "Save Changes",
+    "update": "Update"
   },
   "TOAST": {
     "error_header": "Error",
