feat(student-friend):student-friend-list

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -28,6 +28,11 @@
     "family_page": "Family page",
     "class_group": "Class group",
     "school_group": "School group",
+    "friends": "Friends",
+    "total_friends": "Total friends",
+    "close_friends": "Close friends",
+    "add_friend": "Add friend",
+    "search_friends": "Search friends...",
     "theme_and_background": "Theme & background",
     "notification_and_sound": "Notification & sound",
     "language": "Language",
