--- a/src/assets/i18n/vn.json
+++ b/src/assets/i18n/vn.json
@@ -28,6 +28,11 @@
     "family_page": "Trang gia đình",
     "class_group": "Nhóm lớp",
     "school_group": "Nhóm toàn trường",
+    "friends": "Bạn bè",
+    "total_friends": "Tổng số bạn bè",
+    "close_friends": "Thân thiện",
+    "add_friend": "Thêm bạn bè",
+    "search_friends": "Tìm kiếm bạn bè...",
     "theme_and_background": "Giao diện & hình nền",
     "notification_and_sound": "Thông báo & âm thanh",
     "language": "Ngôn ngữ",
