feat(student-friend):student-friend-list
rebase

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,14 +34,17 @@
     "home": "Home",
     "profile": "Profile",
     "chatbot": "Chatbot",
-    "rank": "Rank",
-    "friends": "Friends",
     "menu": "Menu",
     "view_profile_page": "View profile page",
     "badge_collection": "Badge collection",
     "family_page": "Family page",
     "class_group": "Class group",
     "school_group": "School group",
+    "friends": "Friends",
+    "total_friends": "Total friends",
+    "close_friends": "Close friends",
+    "add_friend": "Add friend",
+    "search_friends": "Search friends...",
     "rank": "Rank",
     "achievements": "Achievements",
     "your_rank": "Your Rank",
