--- a/src/assets/i18n/vn.json
+++ b/src/assets/i18n/vn.json
@@ -34,14 +34,17 @@
     "home": "Trang chủ",
     "profile": "Cá nhân",
     "chatbot": "Chatbot",
-    "rank": "Xếp hạng",
-    "friends": "Bạn bè",
     "menu": "Menu",
     "view_profile_page": "Xem trang cá nhân",
     "badge_collection": "Bộ sưu tập huy hiệu",
     "family_page": "Trang gia đình",
     "class_group": "Nhóm lớp",
     "school_group": "Nhóm toàn trường",
+    "friends": "Bạn bè",
+    "total_friends": "Tổng số bạn bè",
+    "close_friends": "Thân thiện",
+    "add_friend": "Thêm bạn bè",
+    "search_friends": "Tìm kiếm bạn bè...",
     "rank": "Xếp hạng",
     "achievements": "Thành tích",
     "your_rank": "Xếp hạng của bạn",
