feat(student-friend-detail) UI student friend detail

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -33,6 +33,16 @@
     "close_friends": "Close friends",
     "add_friend": "Add friend",
     "search_friends": "Search friends...",
+    "friend_detail": "Friend Detail",
+    "message": "Message",
+    "unfriend": "Unfriend",
+    "badges": "Badges",
+    "rank": "Rank",
+    "missions": "Missions",
+    "friendly": "Friendly",
+    "school": "School",
+    "class": "Class",
+    "achievements": "Achievements",
     "theme_and_background": "Theme & background",
     "notification_and_sound": "Notification & sound",
     "language": "Language",
