--- a/src/assets/i18n/vn.json
+++ b/src/assets/i18n/vn.json
@@ -33,6 +33,16 @@
     "close_friends": "Thân thiện",
     "add_friend": "Thêm bạn bè",
     "search_friends": "Tìm kiếm bạn bè...",
+    "friend_detail": "Chi tiết bạn bè",
+    "message": "Nhắn tin",
+    "unfriend": "Hủy kết bạn",
+    "badges": "Huy hiệu",
+    "rank": "Xếp hạng",
+    "missions": "Nhiệm vụ",
+    "friendly": "Thân thiện",
+    "school": "Trường",
+    "class": "Lớp",
+    "achievements": "Thành tích",
     "theme_and_background": "Giao diện & hình nền",
     "notification_and_sound": "Thông báo & âm thanh",
     "language": "Ngôn ngữ",
