feat(student-footer): Layout footer, change encrypt library, fix home page style, add animation lottie

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,6 +23,10 @@
     "version": "Version",
     "home": "Home",
     "profile": "Profile",
+    "chatbot": "Chatbot",
+    "rank": "Rank",
+    "friends": "Friends",
+    "menu": "Menu",
     "view_profile_page": "View profile page",
     "badge_collection": "Badge collection",
     "family_page": "Family page",
