--- a/src/assets/i18n/vn.json
+++ b/src/assets/i18n/vn.json
@@ -23,6 +23,10 @@
     "version": "Phiên bản",
     "home": "Trang chủ",
     "profile": "Cá nhân",
+    "chatbot": "Chatbot",
+    "rank": "Xếp hạng",
+    "friends": "Bạn bè",
+    "menu": "Menu",
     "view_profile_page": "Xem trang cá nhân",
     "badge_collection": "Bộ sưu tập huy hiệu",
     "family_page": "Trang gia đình",
