--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,6 +20,34 @@
   "MESSAGE": {
     "feature_under_development": "This feature is under development"
   },
+  "NOTIFICATIONS": {
+    "title": "Notifications",
+    "unread": "Unread",
+    "read": "Read",
+    "no_unread": "No new notifications",
+    "no_read": "No read notifications",
+    "no_results": "No notifications match your search criteria",
+    "search": "Search",
+    "search_title": "Title",
+    "search_status": "Status",
+    "search_type": "Notification Type",
+    "search_time_range": "Time Range",
+    "search_custom_date": "Custom Date Range",
+    "search_from_date": "From Date",
+    "search_to_date": "To Date",
+    "type_emotion": "Emotion Shared",
+    "type_task": "Personal Task",
+    "type_other": "Other",
+    "time_today": "Today",
+    "time_this_week": "This Week",
+    "time_this_month": "This Month",
+    "time_custom": "Custom Range",
+    "time_minutes_ago": "minutes ago",
+    "time_hours_ago": "hours ago",
+    "time_days_ago": "days ago",
+    "loading": "Loading notifications...",
+    "loading_more": "Loading more notifications..."
+  },
   "HOME": {
     "welcome_title": "Welcome back",
     "welcome_subtitle": "Complete tasks to earn rewards!"
