fix(live-upadte-app): Fix lỗi safe-area-inset-top trên thiết bị ios

--- a/src/assets/i18n/vn.json
+++ b/src/assets/i18n/vn.json
@@ -135,7 +135,7 @@
   "BUTTON_TITLES": {
     "confirm": "Xác nhận",
     "cancel": "Hủy bỏ",
-    "open_setting": "Mở cài đặt",
+    "open_settings": "Mở cài đặt",
     "ok": "OK",
     "close": "Đóng",
     "set_as_current": "Đặt làm hiện tại",
