--- a/src/assets/i18n/vn.json
+++ b/src/assets/i18n/vn.json
@@ -21,6 +21,7 @@
   },
   "TITLE": {
     "phone": "Số điện thoại",
+    "account": "Tài khoản",
     "email": "Email",
     "password": "Mật khẩu",
     "login": "Đăng nhập",
@@ -58,7 +59,7 @@
     "school": "Trường",
     "class": "Lớp",
     "theme_and_background": "Giao diện & hình nền",
-    "notification_and_sound": "Thông báo & âm thanh",
+    "notification_and_sound": "Âm thanh & thông báo",
     "language": "Ngôn ngữ",
     "account_and_security": "Tài khoản và bảo mật",
     "privacy_rights": "Quyền riêng tư",
@@ -114,10 +115,13 @@
     "enter_new_pin": "Nhập mã PIN mới",
     "confirm_new_pin": "Xác nhận mã PIN mới",
     "enter_current_pin": "Nhập mã PIN hiện tại",
-    "app_update" : "Cập nhật ứng dụng"
+    "app_update" : "Cập nhật ứng dụng",
+    "not_set": "Chưa thiết lập",
+    "not_set_nickname": "Chưa có biệt danh"
   },
   "VALIDATE": {
     "phone_required": "Vui lòng nhập vào số điện thoại.",
+    "account_required": "Vui lòng nhập vào tài khoản.",
     "password_required": "Vui lòng nhập vào mật khẩu.",
     "new_password_required": "Vui lòng nhập vào mật khẩu mới.",
     "confirm_password_required": "Vui lòng xác nhận mật khẩu mới.",
